--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
 {
-  "name": "net-browserify",
-  "version": "0.1.6",
-  "description": "A port of the net module for the browser.",
+  "name": "net-browserify-stub",
+  "version": "0.0.1",
+  "description": "A stub of the net module for the browser.",
   "author": {
-    "name": "Emersion",
-    "email": "contact@emersion.fr"
+    "name": "Frankie Robertson",
+    "email": "frankie@robertson.name"
   },
   "license": "MIT",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/emersion/net-browserify.git"
+    "url": "https://github.com/frankier/net-browserify-stub.git"
   },
   "keywords": [
     "browserify",
     "net",
     "browser"
   ],
-  "bugs": {
-    "url": "https://github.com/emersion/net-browserify/issues"
-  },
-  "homepage": "https://github.com/emersion/net-browserify",
+  "homepage": "https://github.com/frankier/net-browerify-stub",
   "dependencies": {
-    "body-parser": "^1.10.0",
-    "express": "^4.10.6",
-    "express-ws": "^0.2.1"
   }
 }
